# trace

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-sdk.yml
api/: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  alembic.ini  demo_traces.py  pyproject.toml  seed.py
api/docs/: architecture.md  pr-description.md
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 001_initial_schema.py  002_drop_parent_span_fk.py  003_add_span_output.py
api/src/api/: auth.py  config.py  constants.py  database.py  deps.py  exceptions.py  logger.py  main.py  models.py  rate_limit.py  request_id.py
api/src/api/dal/: api_keys.py  auth.py  orgs.py  segments.py  spans.py  traces.py
api/src/api/routes/: __init__.py  api_keys.py  auth.py  health.py  ingest.py  orgs.py  traces.py
api/src/api/schemas/: api_keys.py  auth.py  ingest.py  orgs.py  traces.py
api/src/api/services/: attribution.py  cost.py  ingest.py
api/tests/: conftest.py
api/tests/api/: test_api_keys.py  test_attribution.py  test_auth.py  test_cost.py  test_health.py  test_ingest.py  test_models.py  test_orgs.py  test_rate_limit.py  test_traces.py
docs/: er-diagram.mermaid  spec.md  trace_dashboard_spec.docx
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: analytics.ts  apiKeys.ts  client.ts  orgs.ts  traces.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: ApiKeySetup.tsx  AttributionHeatmap.tsx  CostDonutChart.tsx  DataTable.tsx  DateRangeFilter.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  OnboardingBanner.tsx  Pagination.tsx  SegmentHighlight.tsx  SegmentScoreBar.tsx  Sidebar.tsx  SpanDetailPanel.tsx  SpanRow.tsx  SpanTimeline.tsx  SpanTree.tsx  StatCard.tsx  StatusBadge.tsx  TimeseriesChart.tsx  Tooltip.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  ErrorMessage.test.tsx  LoadingSpinner.test.tsx  NotFoundPage.test.tsx  OnboardingBanner.test.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useApiKey.ts  useApiKeys.ts  useAttribution.ts  useCostByFunction.ts  useCostByModel.ts  useFunctionDetail.ts  useInView.ts  useOverviewStats.ts  useTheme.ts  useTimeseries.ts  useTraceDetail.ts  useTraces.ts
frontend/src/hooks/__tests__/: useTraceDetail.test.ts  useTraces.test.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrgSelectionPage.tsx  SettingsPage.tsx  TraceDetailPage.tsx  TracesPage.tsx
frontend/src/types/: analytics.ts  apiKeys.ts  traces.ts
frontend/src/utils/: colors.ts  formatters.ts
frontend/src/utils/__tests__/: colors.test.ts  formatters.test.ts
sdk/: README.md  pyproject.toml
sdk/src/usetrace/: __init__.py
sdk/src/usetrace/capture/: __init__.py  llm_prompt.py  llm_response.py  locals.py
sdk/src/usetrace/decorators/: __init__.py  context.py  trace.py
sdk/src/usetrace/models/: __init__.py  span.py
sdk/src/usetrace/transport/: __init__.py  buffer.py  worker.py
sdk/tests/: test_buffer.py  test_capture_locals.py  test_context.py  test_llm_prompt.py  test_llm_response.py  test_placeholder.py  test_trace.py
src/api/: logger.py  main.py
src/api/routes/: __init__.py  health.py
tests/: conftest.py
