[project]
name = "trace-workspace"
version = "0.1.0"
description = "Real-time causal debugger for LLM applications"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = ["sdk", "api"]

[tool.uv.sources]
usetrace = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
